# 2DBattleSim

./: .gitignore  CMakeLists.txt  EditorState.cpp  EditorState.h  README.md
include/: CharWin.h  Core.h  CreditState.h  EditorData.h  EditorState.h  EditorWin.h  Entity.h  Game.h  GameState.h  Map.h  MenuState.h  Soldier.h  StateHandler.h  Timer.h  Window.h
maps/: map1.txt
src/: .MenuState.cpp.swp  CharWin.cpp  CreditState.cpp  EditorState.cpp  EditorWin.cpp  Entity.cpp  Game.cpp  Map.cpp  MenuState.cpp  Soldier.cpp  StateHandler.cpp  Timer.cpp  Window.cpp  main.cpp
